prepare html ,css and pics

--- a/week-1/index.html
+++ b/week-1/index.html
@@ -1,17 +1,91 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8" />
-<title>Assignment-Week 1∣張詠婷</title>
-
-</head>
-<body>
-  <div class="header"></div>
-    <div>"My Website"</div>
-    <div>Item1</div>
-    <div>Item2</div>
-    <div>Item3</div>
-    <div>Item4</div>
-  <div class="banner">Welcome to MyHome</div>
-</body>
-</html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <link rel=stylesheet type="text/css" href="https://hayleychangs.github.io/glowing-parakeet/week-1/style/style.css">
+    <title>Assignment-Week 1 | 張詠婷</title>
+  </head>
+  <body>
+    <div class="header-content wrapper-content">
+      <div>"My Website"</div>
+      <div>Item1</div>
+      <div>Item2</div>
+      <div>Item3</div>
+      <div>Item4</div>
+    </div>
+    <div class="banner wrapper-content">
+      <div>Welcome to MyHome</div>
+    </div>
+    <div class="main-box1  wrapper-content">
+      </div class="box1">
+        <img src="" alt="sea">
+      </div>
+      <div class="box1-text">
+        <div>潛水灣</div>
+      </div>
+      </div class="box1">
+        <img src="" alt="mountain">
+      </div>
+      <div class="box1-text">
+        <div>山</div>
+      </div>
+    </div>
+    <div class="main-box2 wrapper-content">
+      </div class="box2">
+        <img src="" alt="潛水灣">
+      </div>
+      <div class="box2-text">
+        <div>潛水灣</div>
+      </div>
+      </div class="box2">
+        <img src="" alt="咖啡">
+      </div>
+      <div class="box2-text">
+        <div>咖啡</div>
+      </div>
+      </div class="box2">
+        <img src="" alt="咖哩">
+      </div>
+      <div class="box2-text">
+        <div>咖哩</div>
+      </div>
+      </div class="box2">
+        <img src="" alt="司馬庫斯">
+      </div>
+      <div class="box2-text">
+        <div>司馬庫斯</div>
+      </div>
+      </div class="box2">
+        <img src="" alt="布丁">
+      </div>
+      <div class="box2-text">
+        <div>布丁</div>
+      </div>
+      </div class="box2">
+        <img src="" alt="北投">
+      </div>
+      <div class="box2-text">
+        <div>北投</div>
+      </div>
+      </div class="box2">
+        <img src="" alt="東港黑鮪魚">
+      </div>
+      <div class="box2-text">
+        <div>東港黑鮪魚</div>
+      </div>
+      </div class="box2">
+        <img src="" alt="拾穗國王派">
+      </div>
+      <div class="box2-text">
+        <div>拾穗國王派</div>
+      </div>
+      </div class="box2">
+        <img src="" alt="拾穗國王派">
+      </div>
+      <div class="box2-text">
+        <div>拾穗國王派</div>
+      </div>
+    </div>
+  </body>
+  </html>
