--- a/week-1/index.html
+++ b/week-1/index.html
@@ -7,85 +7,108 @@
     <title>Assignment-Week 1 | 張詠婷</title>
   </head>
   <body>
-    <div class="header-content wrapper-content">
-      <div>"My Website"</div>
-      <div>Item1</div>
-      <div>Item2</div>
-      <div>Item3</div>
-      <div>Item4</div>
-    </div>
-    <div class="banner wrapper-content">
-      <div>Welcome to MyHome</div>
-    </div>
-    <div class="main-box1  wrapper-content">
-      </div class="box1">
-        <img src="" alt="sea">
+    <a name="top"></a>   <!--anchor back to top-->
+    <header>
+      <input type="checkbox" name="" id="menu-ctrl">
+      <div class="header-content wrapper-content">
+        <h1 class="theme">My Website</h1>
+        <label for="menu-ctrl">
+          <img class="hamburger" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/hamburger_menu__icon.png" >
+        </label>
+        <nav class="item">
+          <div class="item-text">Item1</div>
+          <div class="item-text">Item2</div>
+          <div class="item-text">Item3</div>
+          <div class="item-text">Item4</div>
+        </nav>
       </div>
-      <div class="box1-text">
-        <div>潛水灣</div>
-      </div>
-      </div class="box1">
-        <img src="" alt="mountain">
-      </div>
-      <div class="box1-text">
-        <div>山</div>
-      </div>
-    </div>
-    <div class="main-box2 wrapper-content">
-      </div class="box2">
-        <img src="" alt="潛水灣">
-      </div>
-      <div class="box2-text">
-        <div>潛水灣</div>
-      </div>
-      </div class="box2">
-        <img src="" alt="咖啡">
-      </div>
-      <div class="box2-text">
-        <div>咖啡</div>
-      </div>
-      </div class="box2">
-        <img src="" alt="咖哩">
-      </div>
-      <div class="box2-text">
-        <div>咖哩</div>
-      </div>
-      </div class="box2">
-        <img src="" alt="司馬庫斯">
-      </div>
-      <div class="box2-text">
-        <div>司馬庫斯</div>
-      </div>
-      </div class="box2">
-        <img src="" alt="布丁">
-      </div>
-      <div class="box2-text">
-        <div>布丁</div>
-      </div>
-      </div class="box2">
-        <img src="" alt="北投">
-      </div>
-      <div class="box2-text">
-        <div>北投</div>
-      </div>
-      </div class="box2">
-        <img src="" alt="東港黑鮪魚">
-      </div>
-      <div class="box2-text">
-        <div>東港黑鮪魚</div>
-      </div>
-      </div class="box2">
-        <img src="" alt="拾穗國王派">
-      </div>
-      <div class="box2-text">
-        <div>拾穗國王派</div>
-      </div>
-      </div class="box2">
-        <img src="" alt="拾穗國王派">
-      </div>
-      <div class="box2-text">
-        <div>拾穗國王派</div>
-      </div>
-    </div>
+    </header>
+    <main>
+      <section class="section-banner wrapper-content">
+        <div class="banner">
+          <h2>Welcome to MyHome</h2>
+        </div>
+      </section> 
+      <section class="section-box1 wrapper-content">
+        <div class="box1">
+          <div class="box1-pic-container">
+            <img class="box1-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/擎天崗.jpg" alt="擎天崗" title="擎天崗">
+          </div>
+          <div class="box1-text">Qingtiangang</div>
+        </div>
+        <div class="box1">
+          <div class="box1-pic-container">
+            <img class="box1-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/司馬庫斯1.jpg" alt="Smangus" title="司馬庫斯">
+          </div>
+          <div class="box1-text">Smangus</div>
+        </div>
+      </section>
+      <section  class="section-box2 wrapper-content">
+        <div class="box2">
+          <div class="box2-pic-container">
+            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/公園.jpg" alt="Park" title="公園">
+          </div>
+          <div class="box2-text">
+            <div>Park</div>
+          </div>
+        </div>
+        <div class="box2">
+          <div class="box2-pic-container">
+            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/短笛.jpg" alt="短笛" title="短笛">
+          </div>
+          <div class="box2-text">
+            <div>Piccolo</div>
+          </div>
+        </div>
+        <div class="box2">
+          <div class="box2-pic-container">
+            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/樂窩咖哩.jpg" alt="樂窩咖哩" title="樂窩咖哩">
+          </div>
+          <div class="box2-text">
+            <div>Love World Curry</div>
+          </div>
+        </div>
+        <div class="box2">
+          <div class="box2-pic-container">
+            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/司馬庫斯.jpg" alt="司馬庫斯" title="司馬庫斯">
+          </div>
+          <div class="box2-text">
+            <div>Smangus</div>
+          </div>
+        </div>
+        <div class="box2">
+          <div class="box2-pic-container">
+            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/布丁.jpg" alt="布丁" title="布丁">
+          </div>
+          <div class="box2-text">
+            <div>Pudding</div>
+          </div>
+        </div>
+        <div class="box2">
+          <div class="box2-pic-container">
+            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/胭脂-北投.jpg" alt="胭脂‧北投" title="胭脂‧北投">
+          </div>
+          <div class="box2-text">
+            <div>Rouge‧Beitou</div>
+          </div>
+        </div>
+        <div class="box2">
+          <div class="box2-pic-container">
+            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/東港黑鮪魚.jpg" alt="東港黑鮪魚" title="東港黑鮪魚">
+          </div>
+          <div class="box2-text">
+            <div>Bluefin Tuna</div>
+          </div>
+        </div>
+        <div class="box2">
+          <div class="box2-pic-container">
+            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/拾穗國王派.jpg" alt="拾穗國王派" title="拾穗國王派">
+          </div>
+          <div class="box2-text">
+            <div>Galette des Rois</div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
   </html>
