--- a/week-1/index.html
+++ b/week-1/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <link rel=stylesheet type="text/css" href="https://hayleychangs.github.io/glowing-parakeet/week-1/style/style.css">
+    <link rel=stylesheet type="text/css" href="style/style.css">
     <title>Assignment-Week 1 | 張詠婷</title>
   </head>
   <body>
@@ -13,7 +13,7 @@
       <div class="header-content wrapper-content">
         <h1 class="theme">My Website</h1>
         <label for="menu-ctrl">
-          <img class="hamburger" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/hamburger_menu__icon.png" >
+          <img class="hamburger" src="pics/hamburger_menu__icon.png" >
         </label>
         <nav class="item">
           <div class="item-text">Item1</div>
@@ -32,13 +32,13 @@
       <section class="section-box1 wrapper-content">
         <div class="box1">
           <div class="box1-pic-container">
-            <img class="box1-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/擎天崗.jpg" alt="擎天崗" title="擎天崗">
+            <img class="box1-pic" src="pics/擎天崗.jpg" alt="擎天崗" title="擎天崗">
           </div>
           <div class="box1-text">Qingtiangang</div>
         </div>
         <div class="box1">
           <div class="box1-pic-container">
-            <img class="box1-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/司馬庫斯1.jpg" alt="Smangus" title="司馬庫斯">
+            <img class="box1-pic" src="pics/司馬庫斯1.jpg" alt="Smangus" title="司馬庫斯">
           </div>
           <div class="box1-text">Smangus</div>
         </div>
@@ -46,7 +46,7 @@
       <section  class="section-box2 wrapper-content">
         <div class="box2">
           <div class="box2-pic-container">
-            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/公園.jpg" alt="Park" title="公園">
+            <img class="box2-pic" src="pics/公園.jpg" alt="Park" title="公園">
           </div>
           <div class="box2-text">
             <div>Park</div>
@@ -54,7 +54,7 @@
         </div>
         <div class="box2">
           <div class="box2-pic-container">
-            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/短笛.jpg" alt="短笛" title="短笛">
+            <img class="box2-pic" src="pics/短笛.jpg" alt="短笛" title="短笛">
           </div>
           <div class="box2-text">
             <div>Piccolo</div>
@@ -62,7 +62,7 @@
         </div>
         <div class="box2">
           <div class="box2-pic-container">
-            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/樂窩咖哩.jpg" alt="樂窩咖哩" title="樂窩咖哩">
+            <img class="box2-pic" src="pics/樂窩咖哩.jpg" alt="樂窩咖哩" title="樂窩咖哩">
           </div>
           <div class="box2-text">
             <div>Love World Curry</div>
@@ -70,7 +70,7 @@
         </div>
         <div class="box2">
           <div class="box2-pic-container">
-            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/司馬庫斯.jpg" alt="司馬庫斯" title="司馬庫斯">
+            <img class="box2-pic" src="pics/司馬庫斯.jpg" alt="司馬庫斯" title="司馬庫斯">
           </div>
           <div class="box2-text">
             <div>Smangus</div>
@@ -78,7 +78,7 @@
         </div>
         <div class="box2">
           <div class="box2-pic-container">
-            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/布丁.jpg" alt="布丁" title="布丁">
+            <img class="box2-pic" src="pics/布丁.jpg" alt="布丁" title="布丁">
           </div>
           <div class="box2-text">
             <div>Pudding</div>
@@ -86,7 +86,7 @@
         </div>
         <div class="box2">
           <div class="box2-pic-container">
-            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/胭脂-北投.jpg" alt="胭脂‧北投" title="胭脂‧北投">
+            <img class="box2-pic" src="pics/胭脂-北投.jpg" alt="胭脂‧北投" title="胭脂‧北投">
           </div>
           <div class="box2-text">
             <div>Rouge‧Beitou</div>
@@ -94,7 +94,7 @@
         </div>
         <div class="box2">
           <div class="box2-pic-container">
-            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/東港黑鮪魚.jpg" alt="東港黑鮪魚" title="東港黑鮪魚">
+            <img class="box2-pic" src="pics/東港黑鮪魚.jpg" alt="東港黑鮪魚" title="東港黑鮪魚">
           </div>
           <div class="box2-text">
             <div>Bluefin Tuna</div>
@@ -102,7 +102,7 @@
         </div>
         <div class="box2">
           <div class="box2-pic-container">
-            <img class="box2-pic" src="https://hayleychangs.github.io/glowing-parakeet/week-1/pics/拾穗國王派.jpg" alt="拾穗國王派" title="拾穗國王派">
+            <img class="box2-pic" src="pics/拾穗國王派.jpg" alt="拾穗國王派" title="拾穗國王派">
           </div>
           <div class="box2-text">
             <div>Galette des Rois</div>
