--- a/week-1/index.html
+++ b/week-1/index.html
@@ -32,7 +32,7 @@
       <section class="section-box1 wrapper-content">
         <div class="box1">
           <div class="box1-pic-container">
-            <img class="box1-pic" src="pics/擎天崗.jpg" alt="擎天崗" title="擎天崗">
+            <img class="box1-pic" src="pics/擎天崗.JPG" alt="擎天崗" title="擎天崗">
           </div>
           <div class="box1-text">Qingtiangang</div>
         </div>
