update new task
update new task

--- a/week-1/index.html
+++ b/week-1/index.html
@@ -45,7 +45,8 @@
       </section>
       <section  class="section-box2 wrapper-content">
         <div class="box2">
-          <div class="box2-pic-container">
+            <img class="star-icon" src="pics/star_icon.png" alt="Star">
+            <div class="box2-pic-container">
             <img class="box2-pic" src="pics/公園.jpg" alt="Park" title="公園">
           </div>
           <div class="box2-text">
@@ -53,6 +54,7 @@
           </div>
         </div>
         <div class="box2">
+          <img class="star-icon" src="pics/star_icon.png" alt="Star">
           <div class="box2-pic-container">
             <img class="box2-pic" src="pics/短笛.jpg" alt="短笛" title="短笛">
           </div>
@@ -61,6 +63,7 @@
           </div>
         </div>
         <div class="box2">
+          <img class="star-icon" src="pics/star_icon.png" alt="Star">
           <div class="box2-pic-container">
             <img class="box2-pic" src="pics/樂窩咖哩.jpg" alt="樂窩咖哩" title="樂窩咖哩">
           </div>
@@ -69,6 +72,7 @@
           </div>
         </div>
         <div class="box2">
+          <img class="star-icon" src="pics/star_icon.png" alt="Star">
           <div class="box2-pic-container">
             <img class="box2-pic" src="pics/司馬庫斯.jpg" alt="司馬庫斯" title="司馬庫斯">
           </div>
@@ -77,6 +81,7 @@
           </div>
         </div>
         <div class="box2">
+          <img class="star-icon" src="pics/star_icon.png" alt="Star">
           <div class="box2-pic-container">
             <img class="box2-pic" src="pics/布丁.jpg" alt="布丁" title="布丁">
           </div>
@@ -85,6 +90,7 @@
           </div>
         </div>
         <div class="box2">
+          <img class="star-icon" src="pics/star_icon.png" alt="Star">
           <div class="box2-pic-container">
             <img class="box2-pic" src="pics/胭脂-北投.jpg" alt="胭脂‧北投" title="胭脂‧北投">
           </div>
@@ -93,6 +99,7 @@
           </div>
         </div>
         <div class="box2">
+          <img class="star-icon" src="pics/star_icon.png" alt="Star">
           <div class="box2-pic-container">
             <img class="box2-pic" src="pics/東港黑鮪魚.jpg" alt="東港黑鮪魚" title="東港黑鮪魚">
           </div>
@@ -101,6 +108,7 @@
           </div>
         </div>
         <div class="box2">
+          <img class="star-icon" src="pics/star_icon.png" alt="Star">
           <div class="box2-pic-container">
             <img class="box2-pic" src="pics/拾穗國王派.jpg" alt="拾穗國王派" title="拾穗國王派">
           </div>
