--- a/week-3/index.html
+++ b/week-3/index.html
@@ -7,7 +7,6 @@
     <title>Assignment-Week 3 | 張詠婷</title>
   </head>
   <body>
-    <a name="top"></a>   <!--anchor back to top-->
     <header>
       <input type="checkbox" name="" id="menu-ctrl">
       <div class="header-content wrapper-content">
@@ -33,16 +32,12 @@
         <div id="box1-1" class="box1"></div>
         <div id="box1-2" class="box1"></div>
       </section>
-      <section  class="section-box2 wrapper-content">
-        <div id="box2-1" class="box2"></div>
-        <div id="box2-2" class="box2"></div>
-        <div id="box2-3" class="box2"></div>
-        <div id="box2-4" class="box2"></div>
-        <div id="box2-5" class="box2"></div>
-        <div id="box2-6" class="box2"></div>
-        <div id="box2-7" class="box2"></div>
-        <div id="box2-8" class="box2"></div>
+      <section id="section2" class="section-box2 wrapper-content">
       </section>
+      <div class="load-more-container">
+        <div id="btn" class="load-more">Load More</div>
+      </div>
+      
     </main>
     <script src="./fetch.js"></script>
   </body>
